--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Todo List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .theme-toggle {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 10;
+    }
+  </style>
 </head>
-<body class="bg-light">
+<body class="bg-light position-relative">
+  <button id="theme-toggle" class="btn btn-outline-secondary theme-toggle" aria-label="Toggle light/dark mode">
+    <span id="theme-icon" class="">&#9788;</span>
+  </button>
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
@@ -26,6 +37,41 @@
     </div>
   </div>
   <script>
+    // Theme toggle logic
+    const themeToggleBtn = document.getElementById('theme-toggle');
+    const themeIcon = document.getElementById('theme-icon');
+    const html = document.documentElement;
+    const body = document.body;
+
+    function setTheme(theme) {
+      html.setAttribute('data-bs-theme', theme);
+      if (theme === 'dark') {
+        body.classList.remove('bg-light');
+        body.classList.add('bg-dark');
+        themeIcon.innerHTML = '&#9790;'; // Moon
+      } else {
+        body.classList.remove('bg-dark');
+        body.classList.add('bg-light');
+        themeIcon.innerHTML = '&#9788;'; // Sun
+      }
+      localStorage.setItem('bs-theme', theme);
+    }
+
+    // On load, set theme from localStorage or system preference
+    (function() {
+      let theme = localStorage.getItem('bs-theme');
+      if (!theme) {
+        theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+      }
+      setTheme(theme);
+    })();
+
+    themeToggleBtn.addEventListener('click', function() {
+      const current = html.getAttribute('data-bs-theme');
+      setTheme(current === 'dark' ? 'light' : 'dark');
+    });
+
+    // Todo app logic
     const form = document.getElementById('todo-form');
     const input = document.getElementById('todo-input');
     const list = document.getElementById('todo-list');
